@@ -2,18 +2,20 @@ Index: kde4libs/kdecore/tests/kmimetype_nomimetypes.cpp
 ===================================================================
 --- kde4libs.orig/kdecore/tests/kmimetype_nomimetypes.cpp	2014-01-13 11:27:40.562481097 -0300
 +++ kde4libs/kdecore/tests/kmimetype_nomimetypes.cpp	2014-01-14 00:02:04.617982091 -0300
-@@ -53,11 +53,12 @@
+@@ -53,12 +53,13 @@
      KMessage::setMessageHandler(msgHandler);
  
      KMimeType::Ptr s0 = KMimeType::mimeType("application/x-zerosize");
--    Q_ASSERT(!s0); // should NOT be found, otherwise this test is bogus!
 -    if (s0) {
+-        qDebug() << "Found" << s0->name() << "for application/x-zerosize that should not exist";
+-        Q_ASSERT(!s0); // should NOT be found, otherwise this test is bogus!
 -        abort();
 -        return 1;
 -    }
 +    // Bogus test
-+    // Q_ASSERT(!s0); // should NOT be found, otherwise this test is bogus!
 +    // if (s0) {
++    //    qDebug() << "Found" << s0->name() << "for application/x-zerosize that should not exist";
++    //    Q_ASSERT(!s0); // should NOT be found, otherwise this test is bogus!
 +    //    abort();
 +    //    return 1;
 +    // }
